[package]
name = "financ"
version = "0.3.0"
license = "MIT OR Apache-2.0"
authors = ["Zsombor Gegesy <gzsombor@gmail.com>"]
repository = "https://github.com/gzsombor/financ"
homepage = "https://github.com/gzsombor/financ"
edition = "2018"

description = "Tool to inspect and modify GnuCash files, and correlate with external sources"

[dependencies]
diesel = { version = "1.4.2", features = ["sqlite"] }
dotenv = "0.10"
clap = "2.32.0"
chrono = "0.4.10"
calamine = "0.16.1"
regex = "1"
lazy_static = "1.4.0"
console = "0.9.1"
guid-create = "0.1.1"
anyhow = "1.0"

#[patch.crates-io]
#calamine = { path = "../calamine" }
