[package]
name = "financ"
version = "0.4.0"
license = "MIT OR Apache-2.0"
authors = ["Zsombor Gegesy <gzsombor@gmail.com>"]
repository = "https://github.com/gzsombor/financ"
homepage = "https://github.com/gzsombor/financ"
edition = "2018"

description = "Tool to inspect and modify GnuCash files, and correlate with external sources"

[dependencies]
diesel = { version = "2.1", features = ["sqlite"] }
dotenv = "0.15"
clap = { version = "4.4", features = ["derive"] }
clap_complete = { version = "4.4" }
chrono = "0.4.10"
calamine = "0.23"
regex = "1"
lazy_static = "1.4.0"
console = "0.15"
guid-create = "0.4"
anyhow = "1.0"
rust_decimal = "1.35.0"

#[patch.crates-io]
#calamine = { path = "../calamine" }
